fix tags wrap

--- a/EzhaBy/EzhaBy.Web/ezha-by/src/app/pages/catering-facilities-page/catering-facilities-page.component.scss
+++ b/EzhaBy/EzhaBy.Web/ezha-by/src/app/pages/catering-facilities-page/catering-facilities-page.component.scss
@@ -34,10 +34,12 @@
   .tags {
     padding-top: 20px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 
     .tag {
       margin-right: 10px;
+      margin-bottom: 10px;
     }
 
     .tag {
